correction, this one fixes the overlap

--- a/src/index.css
+++ b/src/index.css
@@ -123,6 +123,7 @@ h1, h2 {
 .suggestion-counter {
   font-weight: bold;
   color: magenta;
+  font-size: 0.7rem;
 }
 
 .grey-text {
@@ -146,6 +147,7 @@ h1, h2 {
 .input-inner {
   position: absolute;
   width: 100%;
+  height: 50%;
 }
 
 .button-inner::before,
